...
    "dashboard.followers": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Followers"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "フォロワー"
...
    "mediakit.avgComments": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Avg Comments"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "平均コメント"
...
    "trends.daily": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Daily"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "日次"
...
    "trends.monthly": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Monthly"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "月次"
...
    "trends.weekly": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Weekly"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "週次"
...
    "trends.yearly": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Yearly"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "年次"
...
